[package]
name = "ae350_rust_example"
version = "0.1.0"
edition = "2021"

[dependencies]
riscv = "0.11"
riscv-rt = "0.12"

[build-dependencies]
sag_parser = { path = "../tools/sag_parser" }

[profile.release]
opt-level = "s"      # Optimize for size
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization
debug = true         # Keep debug info for objdump

[profile.dev]
opt-level = 1        # Some optimization even in dev
